# sfml-cmake-bootstrap

./: CMakeLists.txt
scripts/: build.bat  configure.bat  configure_build_run.bat  run.bat
src/: main.cpp
